// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextSkeleton /> should render a text skeleton 1`] = `
.c1 {
  -webkit-animation: jXsTbE .8s linear infinite alternate;
  animation: jXsTbE .8s linear infinite alternate;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  will-change: opacity;
  background-color: #E1E6EB;
  border: 1px solid #E1E6EB;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  border-radius: 4px;
  width: 100%;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

<TextSkeleton
  showSkeleton={true}
  type="body"
>
  <Styled(styled.span)
    textType="body"
  >
    <styled.span
      className="c0"
      textType="body"
    >
      <span
        className="c0 c1"
      >
        ‌
      </span>
    </styled.span>
  </Styled(styled.span)>
</TextSkeleton>
`;

exports[`<TextSkeleton /> should render a text skeleton with set type 1`] = `
.c1 {
  -webkit-animation: jXsTbE .8s linear infinite alternate;
  animation: jXsTbE .8s linear infinite alternate;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  will-change: opacity;
  background-color: #E1E6EB;
  border: 1px solid #E1E6EB;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  border-radius: 4px;
  width: 100%;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  font-size: 24px;
  line-height: 28px;
  -webkit-letter-spacing: -.02em;
  -moz-letter-spacing: -.02em;
  -ms-letter-spacing: -.02em;
  letter-spacing: -.02em;
}

<TextSkeleton
  showSkeleton={true}
  type="display"
>
  <Styled(styled.span)
    textType="display"
  >
    <styled.span
      className="c0"
      textType="display"
    >
      <span
        className="c0 c1"
      >
        ‌
      </span>
    </styled.span>
  </Styled(styled.span)>
</TextSkeleton>
`;

exports[`<TextSkeleton /> should render a text skeleton with set width 1`] = `
.c1 {
  -webkit-animation: jXsTbE .8s linear infinite alternate;
  animation: jXsTbE .8s linear infinite alternate;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  will-change: opacity;
  background-color: #E1E6EB;
  border: 1px solid #E1E6EB;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  border-radius: 4px;
  width: 250px;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  font-size: 16px;
  line-height: 24px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

<TextSkeleton
  showSkeleton={true}
  type="body"
  width={250}
>
  <Styled(styled.span)
    textType="body"
    width="250px"
  >
    <styled.span
      className="c0"
      textType="body"
      width="250px"
    >
      <span
        className="c0 c1"
        width="250px"
      >
        ‌
      </span>
    </styled.span>
  </Styled(styled.span)>
</TextSkeleton>
`;
